--- a/sample/src/main/res/layout/toolbar_editor.xml
+++ b/sample/src/main/res/layout/toolbar_editor.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="EDITOR DEMO"
+            android:text="EDITOR MANACY"
             android:paddingTop="5dp"
             android:textSize="25sp"
             android:textStyle="bold"
