--- a/sample/src/main/res/layout/toolbar_render.xml
+++ b/sample/src/main/res/layout/toolbar_render.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="RENDERED VIEW"
+            android:text="RENDERED"
             android:paddingTop="5dp"
             android:textSize="25sp"
             android:textStyle="bold"
